--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ nav {
 }
 nav .nav-container {
   display: flex;
-  /* height: 100%; */
   padding: 8px;
   justify-content: center;
   align-items: center;
@@ -144,7 +143,8 @@ nav .cart {
   box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
 }
 .section-1-container {
-  width: 1280px;
+  /*  */
+  width: 1200px;
   margin: 0 auto;
   height: 100%;
   display: flex;
@@ -176,6 +176,10 @@ nav .cart {
   height: 280px;
   width: 100%;
 } */
+
+.section-2 container{
+  width: 100%;
+}
 
 .slider{
  width: 100%;
