--- a/style.css
+++ b/style.css
@@ -170,60 +170,45 @@ nav .cart {
 }
 /* section 2 */
 
-
-/* .section-2-container{
-  margin-top: 16px;
-  height: 280px;
-  width: 100%;
-} */
-
-.section-2 container{
-  width: 100%;
-}
-
-.slider{
- width: 100%;
- display: flex;
- padding: 10px 0px;
- overflow: hidden;
-}
-
-.slider-img{
-  width: 100%;
-  padding-right: 20px;
-  height: 250px;
-  transition: 1s;
-}
-
-.slider-image{
-  display: flex;
-  padding-right: 20px;
-  /* animation: 3s sliderimages; */
-}
-
-.btn-container{
-  margin: auto;
-  width: 10px;
-}
-
-.btn{
-  padding: 35px 15px;
+/******imageSliderContainer*******/
+.imageSliderContainer{
+  position: relative;
   background-color: #f1f3f6;
-  font-size: 35px;
+  padding: 10px 5px;
+  display: flex;
+}
+.imageSliderList{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 99%;
+  height: 100%;
+}
+
+.imageSliderBtn{
+  position: absolute;
+  z-index: 10;
+  width: 99%;
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
+}
+
+.imageSliderBtn button{
+  padding: 30px 15px;
+  background-color: white;
   border: none;
-  outline: none;
-  border-radius: 5px;
-  cursor: pointer;
+  box-shadow: 1px 1px 5px rgba(0,0,0,0,0.1);
+  font-size: 30px;
 }
 
-.btn-left{
-  position: relative;
-  z-index: 5;
+.imageSliderItem{
+  max-width: 1600px;
 }
 
-.btn-right{
-  position: relative;
-  left: -50px;
+.imageSliderItem img{
+  width: 100%;
 }
 
 /* slider image animation */
@@ -328,12 +313,199 @@ nav .cart {
   font-size: 12px;
 }
 
+.productName1{
+  margin-top: 16px;
+  font-size: 14px;
+  font-weight: 500;
+}
+.productPrice1{
+  margin-top: 12px;
+  font-size: 16px;
+  color: #388e3c;
+}
+.productDesc1 {
+  opacity: 0.6;
+  margin-top: 12px;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+
+/* best of electronic */
+.section-4-container {
+  height: 100%;
+  margin-top: 8px;
+  /* height: 362px; */
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.section-4-offers {
+  height: 100%;
+}
+.section-4-offers-viewall {
+  margin-top: 132px;
+  width: 100%;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-4-offers-viewall button {
+  margin-top: 24px;
+  height: 40px;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: 500;
+  justify-content: space-between;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.section-4-offers-viewall img {
+  width: 100%;
+}
+
+.card-product-container {
+  height: 100%;
+  /* width: calc(100% - 230px); */
+  /* width: 100%; */
+  display: flex;
+  overflow-x: auto;
+}
+.card-product {
+  width: 232px;
+  height: 100%;
+  padding: 0px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.card-product img {
+  max-width: 200px;
+  max-height: 200px;
+}
+.productName{
+  margin-top: 16px;
+  font-size: 14px;
+  font-weight: 500;
+}
+.productPrice{
+  margin-top: 12px;
+  font-size: 16px;
+  color: #388e3c;
+}
+.productDesc {
+  opacity: 0.6;
+  margin-top: 12px;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+
+
 /* section-5 */
 .section-5 {
   margin-top: 8px;
   display: flex;
   justify-content: space-between;
 }
+
+/* new */
+
+
+/*************************bestofElectronic_Contianer**************************************************/
+.bestofElectronic_Contianer{
+  width: 99%;
+  height: 310px;
+  background-color: red;
+}
+.bestofElectronicmoreOption{
+  height: 100px;
+  max-width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+.bestofElectronicmoreOption img{
+  height: 100%;
+  width: 100%;
+}
+.BestofElectronic_item{
+  background-color: white;
+  min-width: 210px;
+  max-width:210px ;
+  height: 310px;
+  position: relative;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+}
+.viewAllBtn{
+  background-color: #2874f0;
+  padding: 6px 16px;
+  border-radius: 3px;
+  color:white;
+  font-size: 15px;
+}
+.bestofElectronic_bigText{
+  font-size: 30px;
+  text-align: center;
+  margin:60px 0px 30px 0px;
+}
+.bestofElectronic_list{
+  display: flex;
+}
+.bestOfElectornic_image_Product{
+  height: max-content;
+  text-align: center;
+  height: 210px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.bestOfElectornic_image_Product img{
+  width: 90%;
+  max-height: 210px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.bestofElectornicProduct_name{
+  font-size: 15px;
+  padding: 5px;
+  letter-spacing: 0.5px;
+}
+.bestofElecronic_discount{
+  color:#388e3c;
+}
+.bestofElectronic_brand{
+  color:rgb(143, 136, 136);
+}
+
+
+.bestofElctronic_product_item{
+  display: flex;
+  overflow: hidden;
+}
+.bestofElectronic_brand{
+  font-size: 12px;
+  padding-top: 7px;
+}
+.bestofElectornicProduct_name{
+  color:#000;
+}
+
+
 .section-5 img {
   width: 33%;
 }
