--- a/style.css
+++ b/style.css
@@ -170,46 +170,69 @@ nav .cart {
 }
 /* section 2 */
 
-/******imageSliderContainer*******/
 .imageSliderContainer{
   position: relative;
+  height: 280px;
   background-color: #f1f3f6;
-  padding: 10px 5px;
-  display: flex;
-}
-.imageSliderList{
-  display: flex;
+  padding: 10px 0px;
+  /* display: flex;
   justify-content: center;
-  flex-direction: column;
-  width: 99%;
-  height: 100%;
+  align-items: center; */
 }
-
 .imageSliderBtn{
   position: absolute;
-  z-index: 10;
+  /* z-index: 10; */
   width: 99%;
   display: flex;
   justify-content: space-between;
-  height: 100%;
   align-items: center;
+  height: 100%;
 }
-
 .imageSliderBtn button{
-  padding: 30px 15px;
+  padding: 30px 12px;
   background-color: white;
-  border: none;
-  box-shadow: 1px 1px 5px rgba(0,0,0,0,0.1);
+  border:none;
+  outline: none;
+  box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
   font-size: 30px;
+  /* border-radius: 5px; */
+  z-index: 13;
+}
+.imageSliderBtn button:nth-child(odd){
+  border-radius: 0px 3px 3px 0px;
+}
+.imageSliderBtn button:nth-child(even){
+  border-radius: 3px 0px 0px 3px;
 }
 
+
+.imageSliderList{
+  /* position: absolute; */
+  /* z-index: 11; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  overflow: hidden;
+  
+}
 .imageSliderItem{
-  max-width: 1600px;
+  min-width: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  /* transform: translateX(-400%); */
+  transition: transform 0.5s;
 }
-
 .imageSliderItem img{
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1.3);
 }
+
 
 /* slider image animation */
 
